--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -130,6 +130,7 @@ include ../blocks/places/places
 include ../blocks/popups/popups
 include ../blocks/price/price
 include ../blocks/processing-status/processing-status
+include ../blocks/profile-list/profile-list
 include ../blocks/progress/progress
 include ../blocks/promo-section/promo-section
 include ../blocks/promo-slider/promo-slider
@@ -251,6 +252,7 @@ include ../components/popup-reminder-empty/popup-reminder-empty
 include ../components/popup-reminder-save/popup-reminder-save
 include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
+include ../components/popup-success/popup-success
 include ../components/popup-warning/popup-warning
 include ../components/promo/promo
 include ../components/records/records
