--- a/app/pages/guest-account/guest-account-rents-empty.pug
+++ b/app/pages/guest-account/guest-account-rents-empty.pug
@@ -32,7 +32,12 @@ block content
           +nd-side-navigation(nav, 'My rents')._profile
 
       +nd-content-main
-
+        +nd-section._fx._fx_center._rents
+          +text-block._gray._empty.__content
+            +e.title_fz30 The list of your Rents
+            +e.content_fz18 Nothing here yet, but we expect you to start your first rent soon.
+            +e.links
+              +nd-link._blue.__link_fz16._stolzl(href="#") Search for spaces
 block panels
 
 block popups
