--- a/app/pages/guest-account/guest-account-rents.pug
+++ b/app/pages/guest-account/guest-account-rents.pug
@@ -32,6 +32,8 @@ block content
           +nd-side-navigation(nav, 'My rents')._profile
 
       +nd-content-main
+        +records
+
 
 block panels
 
