--- a/app/pages/guest-account/guest-account-viewings.pug
+++ b/app/pages/guest-account/guest-account-viewings.pug
@@ -32,6 +32,7 @@ block content
           +nd-side-navigation(nav, 'My viewings')._profile
 
       +nd-content-main
+        +records
 
 block panels
 
