--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -37,13 +37,13 @@ block content
           +nd-link(href="rental-summary-signup-confirmed.html") Spacepool - Rental Summary - Signup - Email Confirmed (rental-summary-signup-confirmed.html)
           +nd-link(href="rental-summary-login.html") Spacepool - Rental Summary - Login (rental-summary-login.html)
 
-          //- +nd-link(href="guest-account.html") Spacepool - Guest Account - Mobile Only (guest-account.html)
+          +nd-link(href="guest-account.html") Spacepool - Guest Account - Mobile Only (guest-account.html)
           +nd-link(href="guest-account-basic.html") Spacepool - Guest Account - Account Settings | Basic info (guest-account-basic.html)
           +nd-link(href="guest-account-messages.html") Spacepool - Guest Account - Messages (guest-account-messages.html)
           +nd-link(href="guest-account-notes.html") Spacepool - Guest Account - Notififcations (guest-account-notes.html)
           //- +nd-link(href="guest-account-payments.html") Spacepool - Guest Account - Payment methods (guest-account-payments.html)
           //- +nd-link(href="guest-account-payments-add.html") Spacepool - Guest Account - Payment methods | Add (guest-account-payments-add.html)
           //- +nd-link(href="guest-account-rents.html") Spacepool - Guest Account - My rents (guest-account-rents.html)
-          //- +nd-link(href="guest-account-rents-empty.html") Spacepool - Guest Account - My rents | Empty  (guest-account-rents-emptyhtml)
+          +nd-link(href="guest-account-rents-empty.html") Spacepool - Guest Account - My rents | Empty  (guest-account-rents-emptyhtml)
           +nd-link(href="guest-account-shorts.html") Spacepool - Guest Account - Shortlist (guest-account-shorts.html)
           //- +nd-link(href="guest-account-viewings.html") Spacepool - Guest Account - My viewings (guest-account-viewings.html)
