--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -84,6 +84,17 @@
     }
   }
 
+  &_fx {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    &_center {
+      align-items: center;
+    }
+  }
+
   &__header {
     display: block;
     width: 100%;
@@ -205,11 +216,14 @@
   }
 
   &__menu {
-    width: 100%;
-    max-width: 65%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 65%;
 
     @include screen('md', max, 2) {
-      max-width: pxtovw(540, 960);
+      display: block;
+      width: pxtovw(540, 960);
     }
 
     &:not(:first-child) {
@@ -229,6 +243,15 @@
 
       @include screen('sm', max, 2) {
         margin-left: pxtovw(30, 375);
+      }
+    }
+
+    .slider-navigation {
+      width: auto;
+      max-width: 100%;
+
+      @include screen('md', max, 2) {
+        width: 100%;
       }
     }
   }
@@ -836,6 +859,53 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(45, 375);
+      }
+    }
+  }
+
+  &_rents {
+    box-sizing: border-box;
+    padding-top: 154px;
+
+    @include screen('xlg', max, 2) {
+      padding-top: pxtovw(154, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-top: pxtovw(119, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-top: pxtovw(99, 960);
+      padding-bottom: pxtovw(99, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding-top: pxtovw(158, 375);
+      padding-bottom: pxtovw(158, 375);
+    }
+
+    #{$b} {
+      &__content {
+        text-align: center;
+        width: 100%;
+        max-width: 510px;
+
+        @include screen('xlg', max, 2) {
+          max-width: pxtovw(510, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          max-width: pxtovw(510, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          max-width: pxtovw(510, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          max-width: none;
+        }
       }
     }
   }
