--- a/app/pages/guest-account/guest-account-payments.pug
+++ b/app/pages/guest-account/guest-account-payments.pug
@@ -32,6 +32,7 @@ block content
           +nd-side-navigation(nav, 'Payment methods')._profile
 
       +nd-content-main
+        +records
 
 block panels
 
