guest acc start rents and viewings

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -670,4 +670,11 @@
       height: pxtovw(16, 375);
     }
   }
+
+  &_sm-size8 {
+    @include screen('sm', max, 2) {
+      width: pxtovw(8, 375);
+      height: pxtovw(8, 375);
+    }
+  }
 }
