--- a/app/pages/guest-account/guest-account-rents.pug
+++ b/app/pages/guest-account/guest-account-rents.pug
@@ -33,6 +33,8 @@ block content
 
       +nd-content-main
         +records
+          each item in getData('nd-guest-acc-rents.json')
+            +space-card(item)._rent._rent_g.__item_rent
 
 
 block panels
