--- a/app/components/space-card/space-card.pug
+++ b/app/components/space-card/space-card.pug
@@ -1,3 +1,45 @@
-mixin space-card()
-  +b.space-card&attributes(attributes)
+mixin space-card(data)
+  +b.SECTION.space-card&attributes(attributes)
+    if data.type
+      +space-type.__type(class=(data.type.cls || ''))
+        +nd-box()(class=data.type.box + ' __box')
+        +e.name(class=(data.type.nameCls || ''))!=data.type.name
+    if data.title
+      +e.H3.title(class=(data.title.cls || ''))!=data.title.name
+    if data.location
+      +e.location(class=(data.location.cls || ''))!=data.location.text
+    if data.contacts
+      +e.contacts
+        +person
+          if data.contacts.position
+            +e.position!=data.contacts.position
+          +nd-short-profile-data(data.contacts.person).__profile
+        if data.contacts.newMessages
+          +nd-button-icon('', {icon: 'nd-bubble', notext: true})._pad10._h32.__chat.is-new(data-counter=data.contacts.newMessages)
+        else
+          +nd-button-icon('', {icon: 'nd-bubble', notext: true})._pad10._h32.__chat
+    if data.map
+      +e.map(class=(data.map.class || ''))
+        +e.map-container(id=data.map.id)
+        +nd-button()._pad10._fw400._h32._fz16.__map-button(href="#") Open in Maps
+    if data.gallery
+      +gallery(data.gallery)._space.__media.js-nd-gallery
+    if data.datetime
+      +e.datetime
+        +e.date!=data.datetime.date
+        +e.time!=data.datetime.time
+    if data.resume
+      +nd-table._resume.__table
+        tbody
+          each item in data.resume
+            tr
+              td!=item.name
+              if item.value
+                td!=item.value
+              if item.state
+                +e.TD.state(class=(item.state.class || ''))!=item.state.value
+    if data.link
+      +e.links
+        +nd-link-icon('arrow4')._next._underline.__link(href=(data.link.href || '#') class=(data.link.class || ''))!=data.link.name
+
     block
