guest account rents, viewings full

--- a/app/blocks/gallery/gallery.scss
+++ b/app/blocks/gallery/gallery.scss
@@ -628,6 +628,10 @@
       display: flex;
     }
 
+    &_bg-mid {
+      display: flex;
+    }
+
     &_small {
       display: flex;
       box-sizing: border-box;
@@ -759,6 +763,106 @@
         @include screen('sm', max, 2) {
           width: pxtovw(1, 375);
           height: pxtovw(3, 375);
+        }
+      }
+    }
+
+    #{$b}__buttons_bg-mid & {
+      width: 35px;
+      height: 102px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(35, 1660);
+        height: pxtovw(102, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(29, 1366);
+        height: pxtovw(84, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(24, 960);
+        height: pxtovw(70, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(24, 375);
+        height: pxtovw(70, 375);
+      }
+
+      svg {
+        width: 12px;
+        height: 29px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(12, 1660);
+          height: pxtovw(29, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(12, 1366);
+          height: pxtovw(29, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(11, 960);
+          height: pxtovw(24, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(11, 375);
+          height: pxtovw(24, 375);
+        }
+      }
+    }
+
+    #{$b}__buttons_bg-mid_v2 & {
+      width: 28px;
+      height: 82px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(28, 1660);
+        height: pxtovw(82, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(28, 1366);
+        height: pxtovw(82, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(28, 960);
+        height: pxtovw(82, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(26, 375);
+        height: pxtovw(74, 375);
+      }
+
+      svg {
+        width: 12px;
+        height: 28px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(12, 1660);
+          height: pxtovw(28, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(12, 1366);
+          height: pxtovw(28, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(12, 960);
+          height: pxtovw(28, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(12, 375);
+          height: pxtovw(25, 375);
         }
       }
     }
