--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -33,6 +33,7 @@
   &__box {
     font-size: 0;
     line-height: 0;
+    margin-bottom: 0;
 
     @include screen('md', max, 2) {
       width: pxtovw(7, 960);
@@ -46,6 +47,7 @@
 
     &:not(:last-child) {
       margin-right: 4px;
+      margin-bottom: 0;
 
       @include screen('xlg', max, 2) {
         margin-right: pxtovw(4, 1660);
