--- a/app/pages/guest-account/guest-account-viewings.pug
+++ b/app/pages/guest-account/guest-account-viewings.pug
@@ -32,7 +32,7 @@ block content
           +nd-side-navigation(nav, 'My viewings')._profile
 
       +nd-content-main
-        +records
+        +records._acc
           each item in getData('nd-guest-acc-viewings.json')
             +space-card(item)._view._view_g.__item_view
 
