--- a/app/components/space-card/space-card.scss
+++ b/app/components/space-card/space-card.scss
@@ -19,13 +19,13 @@
   @include screen('lg', max, 2) {
     box-shadow: pxtovw(1, 1366) pxtovw(1, 1366) pxtovw(1, 1366) rgba(0, 0, 0, .03), pxtovw(2, 1366) pxtovw(2, 1366) pxtovw(2, 1366) rgba(0, 0, 0, .04), pxtovw(3, 1366) pxtovw(3, 1366) pxtovw(3, 1366) rgba(0, 0, 0, .02);
     border-radius: pxtovw(3, 1366);
-    padding: pxtovw(30, 1366) pxtovw(40, 1366) pxtovw(44, 1366) pxtovw(45, 1366);
+    padding: pxtovw(28, 1366) pxtovw(40, 1366) pxtovw(44, 1366) pxtovw(45, 1366);
   }
 
   @include screen('md', max, 2) {
     box-shadow: pxtovw(1, 960) pxtovw(1, 960) pxtovw(1, 960) rgba(0, 0, 0, .03), pxtovw(2, 960) pxtovw(2, 960) pxtovw(2, 960) rgba(0, 0, 0, .04), pxtovw(3, 960) pxtovw(3, 960) pxtovw(3, 960) rgba(0, 0, 0, .02);
     border-radius: pxtovw(3, 960);
-    padding: pxtovw(30, 960) pxtovw(40, 960) pxtovw(26, 960) pxtovw(45, 960);
+    padding: pxtovw(33, 960) pxtovw(40, 960) pxtovw(26, 960) pxtovw(45, 960);
   }
 
   @include screen('sm', max, 2) {
@@ -40,12 +40,31 @@
 
     #{$b}_view_g & {
       @include grid-column(1, 2);
+      @include grid-align-self(start);
+
+      margin-top: -4px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(-4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        // @include grid-align-self(center);
+        margin-top: pxtovw(-4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        @include grid-align-self(center);
+
+        margin-top: 0;
+      }
     }
 
     &.space-type {
       font-weight: 600;
       line-height: 1;
       font-size: 13px;
+      font-family: $font-main;
 
       @include screen('xlg', max, 2) {
         font-size: pxtovw(13, 1660);
@@ -60,8 +79,56 @@
       }
 
       @include screen('sm', max, 2) {
+        font-weight: 700;
         font-size: pxtovw(11, 375);
         line-height: (13 / 11);
+        color: $nd-color-gray-text;
+      }
+
+      .space-type__box {
+        width: 9px;
+        height: 9px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(9, 1660);
+          height: pxtovw(9, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(9, 1366);
+          height: pxtovw(9, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(9, 960);
+          height: pxtovw(9, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(8, 375);
+          height: pxtovw(8, 375);
+        }
+
+        &:not(:last-child) {
+          margin-bottom: 0;
+          margin-right: 7px;
+
+          @include screen('xlg', max, 2) {
+            margin-right: pxtovw(7, 1660);
+          }
+
+          @include screen('lg', max, 2) {
+            margin-right: pxtovw(7, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            margin-right: pxtovw(7, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            margin-right: pxtovw(5, 375);
+          }
+        }
       }
     }
   }
@@ -92,6 +159,26 @@
       font-size: pxtovw(20, 375);
     }
 
+    &:not(:first-child) {
+      margin-top: 12px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(12, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(12, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(11, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(7, 375);
+      }
+    }
+
     #{$b}_view_g & {
       @include grid-column(1, 3);
 
@@ -113,6 +200,18 @@
 
         line-height: 1.1;
         font-size: pxtovw(20, 375);
+      }
+
+      &:not(:first-child) {
+        margin-top: 0;
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(25, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(7, 375);
+        }
       }
     }
   }
@@ -144,6 +243,26 @@
       font-size: pxtovw(12, 375);
     }
 
+    &:not(:first-child) {
+      margin-top: 13px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(13, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(10, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(10, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(14, 375);
+      }
+    }
+
     &_dark {
       color: $nd-color-basic;
     }
@@ -167,6 +286,26 @@
 
       @include screen('sm', max, 2) {
         padding-left: pxtovw(22, 375);
+      }
+
+      &:not(:first-child) {
+        margin-top: 14px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(14, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(13, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(19, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(34, 375);
+        }
       }
 
       &::before {
@@ -225,7 +364,7 @@
       }
 
       @include screen('sm', max, 2) {
-        font-size: pxtovw(13, 960);
+        font-size: pxtovw(13, 375);
       }
     }
 
@@ -247,23 +386,76 @@
     justify-content: flex-end;
     align-items: center;
     box-sizing: border-box;
+    padding-right: 5px;
+
+    @include screen('xlg', max, 2) {
+      padding-right: pxtovw(5, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-right: pxtovw(7, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-right: pxtovw(14, 960);
+    }
 
     @include screen('sm', max, 2) {
       @include grid-column(1, 2);
       @include grid-row(6, 7);
 
+      padding-right: 0;
       justify-content: space-between;
-      align-items: center;
-      padding-bottom: pxtovw(15, 375);
+      align-items: flex-end;
+      padding-bottom: pxtovw(12, 375);
       border-bottom: 1px solid $nd-color-border4;
+    }
+
+    &:not(:first-child) {
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(34, 375);
+      }
     }
 
     #{$b}_view_g & {
       @include grid-column(2, 4);
 
+      padding-right: 0;
+
       @include screen('sm', max, 2) {
         @include grid-column(1, 2);
         @include grid-row(7, 8);
+
+        padding-bottom: pxtovw(15, 375);
+      }
+
+      &:not(:first-child) {
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(46, 375);
+        }
+      }
+    }
+
+    .person__profile {
+      &:not(:first-child) {
+        margin-left: 15px;
+
+        @include screen('xlg', max, 2) {
+          margin-left: pxtovw(15, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-left: pxtovw(15, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-left: pxtovw(15, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-left: 0;
+          margin-top: pxtovw(14, 375);
+        }
       }
     }
   }
@@ -319,10 +511,72 @@
     font-size: 0;
     line-height: 0;
     pointer-events: none;
+    padding-right: 36px;
+    box-sizing: border-box;
+
+    @include screen('xlg', max, 2) {
+      padding-right: pxtovw(36, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-right: pxtovw(32, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-right: pxtovw(29, 960);
+    }
 
     @include screen('sm', max, 2) {
       @include grid-column(1, 2);
       @include grid-row(6, 7);
+
+      padding-right: 0;
+      margin: 0 pxtovw(-18, 375);
+      width: calc(100% + ((3600 / 375) * 1vw));
+    }
+
+    &:not(:first-child) {
+      margin-top: 21px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(21, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(45, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(57, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(30, 375);
+      }
+    }
+  }
+
+  &__map-wrapper {
+    position: relative;
+    display: flex;
+    width: 100%;
+    border-radius: 3px;
+    overflow: hidden;
+
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      border-radius: pxtovw(3, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      border-radius: pxtovw(3, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      border-radius: 0;
     }
   }
 
@@ -332,6 +586,24 @@
     box-sizing: border-box;
     overflow: hidden;
     z-index: 0;
+    width: 100%;
+    min-height: 226px;
+
+    @include screen('xlg', max, 2) {
+      min-height: pxtovw(226, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      min-height: pxtovw(226, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      min-height: pxtovw(226, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      min-height: pxtovw(185, 375);
+    }
   }
 
   &__map-button {
@@ -368,9 +640,49 @@
     @include grid-column(1, 2);
     @include grid-row(4, 5);
 
+    border-radius: 3px;
+    padding-top: 63.3%;
+
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-top: 63.2%;
+      border-radius: pxtovw(3, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-top: 63.4%;
+      border-radius: pxtovw(3, 960);
+    }
+
     @include screen('sm', max, 2) {
       @include grid-column(1, 2);
       @include grid-row(4, 5);
+
+      padding-top: 64%;
+      border-radius: pxtovw(3, 375);
+    }
+
+    &:not(:first-child) {
+      margin-top: 27px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(27, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(34, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(34, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(28, 375);
+      }
     }
 
     #{$b}_view_g & {
@@ -380,6 +692,31 @@
       @include screen('sm', max, 2) {
         @include grid-column(1, 2);
         @include grid-row(3, 4);
+
+        border-radius: 0;
+        padding-top: 68.6%;
+        margin: 0 pxtovw(-18, 375);
+        width: calc(100% + ((3600 / 375) * 1vw));
+      }
+
+      &:not(:first-child) {
+        margin-top: 21px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(21, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(45, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(57, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(20, 375);
+        }
       }
     }
   }
@@ -394,17 +731,23 @@
     line-height: (36 / 30);
     font-weight: 400;
     letter-spacing: -.015em;
+    box-sizing: border-box;
+    padding-left: 30px;
+    width: 100%;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(30, 1660);
+      padding-left: pxtovw(30, 1660);
     }
 
     @include screen('lg', max, 2) {
       font-size: pxtovw(30, 1366);
+      padding-left: pxtovw(30, 1366);
     }
 
     @include screen('md', max, 2) {
       font-size: pxtovw(30, 960);
+      padding-left: pxtovw(30, 960);
     }
 
     @include screen('sm', max, 2) {
@@ -413,6 +756,28 @@
 
       line-height: (30 / 25);
       font-size: pxtovw(25, 375);
+      text-align-last: left;
+      padding-left: 0;
+    }
+
+    &:not(:first-child) {
+      margin-top: 12px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(12, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(45, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(46, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(28, 375);
+      }
     }
   }
 
@@ -420,9 +785,50 @@
     @include grid-column(2, 3);
     @include grid-row(4, 5);
 
+    box-sizing: border-box;
+    padding-left: 42px;
+
+    @include screen('xlg', max, 2) {
+      padding-left: pxtovw(42, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-left: pxtovw(37, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-left: pxtovw(20, 960);
+    }
+
     @include screen('sm', max, 2) {
       @include grid-column(1, 2);
       @include grid-row(5, 6);
+
+      padding-left: 0;
+    }
+
+    &:not(:first-child) {
+      margin-top: 4px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(13, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(13, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(17, 375);
+      }
+    }
+
+    .nd-table {
+      width: 100%;
     }
   }
 
@@ -440,13 +846,58 @@
       @include grid-row(7, 8);
     }
 
+    &:not(:first-child) {
+      margin-top: -22px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(-22, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(-6, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(23, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(48, 375);
+      }
+    }
+
     #{$b}_view_g & {
       @include grid-column(3, 4);
       @include grid-row(5, 6);
+      @include grid-align-self(end);
 
       @include screen('sm', max, 2) {
         @include grid-column(1, 2);
         @include grid-row(8, 9);
+      }
+
+      &:not(:first-child) {
+        margin-top: 40px;
+        margin-bottom: 15px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(40, 1660);
+          margin-bottom: pxtovw(15, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(40, 1366);
+          margin-bottom: pxtovw(15, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(40, 960);
+          margin-bottom: 0;
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(30, 375);
+        }
       }
     }
   }
@@ -455,7 +906,7 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 1.63;
-    letter-spacing: -.02;
+    letter-spacing: -.02em;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(20, 1660);
@@ -471,6 +922,26 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(15, 375);
+    }
+
+    #{$b}_view_g & {
+      font-size: 16px;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(16, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(16, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(16, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(15, 375);
+      }
     }
   }
 
@@ -504,24 +975,34 @@
 
   &_view {
     &_g {
-      @include grid-template-columns(255px 392px 1fr);
+      @include grid-template-columns(291px 356px 1fr);
       @include grid-template-rows(grid-repeat(5, auto));
 
+      padding: 41px 50px 53px 45px;
+
       @include screen('xlg', max, 2) {
-        @include grid-template-columns(pxtovw(255, 1660) pxtovw(392, 1660) 1fr);
+        @include grid-template-columns(pxtovw(291, 1660) pxtovw(356, 1660) 1fr);
+
+        padding: pxtovw(41, 1660) pxtovw(50, 1660) pxtovw(53, 1660) pxtovw(45, 1660);
       }
 
       @include screen('lg', max, 2) {
-        @include grid-template-columns(pxtovw(227, 1366) pxtovw(350, 1366) 1fr);
+        @include grid-template-columns(pxtovw(259, 1366) pxtovw(318, 1366) 1fr);
+
+        padding: pxtovw(41, 1366) pxtovw(50, 1366) pxtovw(53, 1366) pxtovw(45, 1366);
       }
 
       @include screen('md', max, 2) {
-        @include grid-template-columns(pxtovw(206, 960) pxtovw(317, 960) 1fr);
+        @include grid-template-columns(pxtovw(235, 960) pxtovw(287, 960) 1fr);
+
+        padding: pxtovw(45, 960) pxtovw(50, 960) pxtovw(53, 960) pxtovw(45, 960);
       }
 
       @include screen('sm', max, 2) {
         @include grid-template-columns(100%);
         @include grid-template-rows(grid-repeat(8, auto));
+
+        padding: pxtovw(28, 375) pxtovw(18, 375) pxtovw(39, 375);
       }
     }
 
