--- a/app/pages/guest-account/guest-account-rents.pug
+++ b/app/pages/guest-account/guest-account-rents.pug
@@ -32,7 +32,7 @@ block content
           +nd-side-navigation(nav, 'My rents')._profile
 
       +nd-content-main
-        +records
+        +records._acc
           each item in getData('nd-guest-acc-rents.json')
             +space-card(item)._rent._rent_g.__item_rent
 
